@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2005/02/21 20:26:12 hubertf Exp $
+# $NetBSD: Makefile,v 1.16 2005/07/12 16:57:36 hubertf Exp $
 #
 
-DISTNAME=	netbsd-doc-print-1.1
-PKGREVISION=	2
+DISTNAME=	netbsd-doc-print-1.2
 CATEGORIES=	meta-pkgs
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -11,7 +10,8 @@ MAINTAINER=	tech-pkg@NetBSD.org
 COMMENT=	Meta-package including all packages to convert SGML->PDF/PS
 
 DEPENDS+=	tex-jadetex>=2.20nb1:../../print/tex-jadetex
-DEPENDS+=	netbsd-doc-1.2:../netbsd-doc
+DEPENDS+=	openjade-[0-9]*:../../textproc/openjade
+DEPENDS+=	netbsd-doc>=1.2:../netbsd-doc
 
 EXTRACT_ONLY=	# empty
 NO_CHECKSUM=	yes
@@ -21,5 +21,6 @@ NO_MTREE=	yes
 
 do-install:	# empty
 
+.include "../../textproc/opensp/buildlink3.mk"
 .include "../../mk/ghostscript.mk"
 .include "../../mk/bsd.pkg.mk"
